[package]
name = "collector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5"
http = "1.4"
bytes = "1.11"
sha2 = "0.10.9"
hmac = "0.12.1"
rustls = "0.23"
jiff = "0.2.23"
itoa = "1.0.18"
tracing = "0.1.44"
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio-rustls = "0.26"
webpki-roots = "0.26"
http-body-util = "0.1"
futures-util = "0.3.32"
serde_json_borrow = "0.9.0"
hyper = { version = "1.9", features = ["full"] }
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4.6.0", features = ["derive"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
zstd = "0.13"
tracing-subscriber = { version = "0.3.23", features = [] }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "unstable-split"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
strip = true
panic = "abort"
incremental = false
codegen-units = 1
